# multifit-optveri

./: .editorconfig  .flake8  .gitignore  README.md  environment.yml  mtf_case2_m12_n42_multi_fallback_visualization.md  mtf_case2_m8_n30_schedule_visualization.md  mtf_case2_max_fallback_start_schedules.md  pyproject.toml
.claude/: settings.local.json
configs/experiments/: paper_base.toml
docs/: paper_traceability.md
inputs/schedules/: README.md  demo_01.txt  demo_02.txt  demo_03.txt  demo_04.txt  demo_05.txt  demo_06.txt  demo_07.txt  demo_08.txt  demo_09.txt  demo_10.txt  jobs_15_m5_fallback.txt  jobs_15_m5_gap.txt  jobs_18.txt  jobs_19_m6_gap.txt  jobs_26.txt  jobs_26_mce.txt  jobs_32_mce_1.txt
scripts/: plan.cmd  plot_schedules.cmd  plot_schedules.py  replay_mtf_assignment.cmd  replay_mtf_assignment.py  run_all.cmd  run_case.cmd  run_obv.py  sample_mtf_schedules.py  write_case_lp.cmd  write_case_lp.py
src/multifit_optveri/: __init__.py  __main__.py  acceleration.py  branching.py  cli.py  config.py  experiments.py  math_utils.py  runner.py  schedules.py  solver_backends.py
src/multifit_optveri/models/: __init__.py  obv.py  obv_core.py  obv_gurobi.py  obv_scip.py  spec.py
tests/: test_acceleration.py  test_branching.py  test_cli.py  test_config.py  test_experiments.py  test_math_utils.py  test_model_spec.py  test_obv_build.py  test_obv_helpers.py  test_plot_schedules_script.py  test_runner.py  test_runner_layout.py  test_schedules.py
tests/fixtures/: demo_config.toml
