[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "multifit-optveri"
version = "0.1.0"
description = "Solver-backed experiments for optimization-based verification of MULTIFIT."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
gurobi = ["gurobipy>=11.0"]
scip = ["pyscipopt>=6.1.0"]
viz = ["matplotlib>=3.8"]

[project.scripts]
multifit-optveri = "multifit_optveri.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-ignore = ["E203"]
